mobile nav edited

--- a/Games.html
+++ b/Games.html
@@ -153,12 +153,13 @@
 
                     </section></a>
                 <hr>
-                <a id="selected" href="./index.html">Home</a>
+                <a href="./index.html">Home</a>
                 <a href="./About-us.html">About us</a>
-                <a href="./Games.html">Games</a>
+                <a id="selected" href="./Games.html">Games</a>
                 <a href="./Upcoming-Games.html">Upcoming Games</a>
-                <a href="./Consoles.html">Consoles</a>
-                <a href="./Peripherals.html">Peripherals</a>
+                <a href="./Consoles.html" onclick="setDefault()">Consoles</a>
+                <a href="./Peripherals.html" onclick="setDefault()">Peripherals</a>
+                <a href="./Accessories.html" onclick="setDefault()">Accessories</a>
                 <a href="./Faq.html">Faq</a>
                 <hr>
                 <a href="./cart.html">Cart</a>
