--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                 <a href="./Games.html">Games</a>
                 <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a href="./Consoles.html" onclick="setDefault()">Consoles</a>
-                <a href="./Peripherals.html">Peripherals</a>
+                <a href="./Peripherals.html" onclick="setDefault()">Peripherals</a>
+                <a href="./Accessories.html" onclick="setDefault()">Accessories</a>
                 <a href="./Faq.html">Faq</a>
                 <hr>
                 <a href="./cart.html">Cart</a>
