--- a/cart.html
+++ b/cart.html
@@ -92,7 +92,7 @@
 
         <a href="#cartTable" class="viewCartButton" id="viewCart">View Cart</a>
 
-        <h1 class="cartStatus">Your cart is empty...!</h1>
+        <a href="./Accessories.html" class="cartStatus">Shop Here</a>
     
         <section class="tableContainer" id="cartTable">
     
