--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <h1>Games</h1>
                     </section></a>
 
-                    <a href="./Store.html" id="sub5"><section class="sub-2" id="sub-sec5">
+                    <a href="./Accessories.html" id="sub5"><section class="sub-2" id="sub-sec5">
                         <h1>Store</h1>
                     </section></a>
 
