--- a/payment.html
+++ b/payment.html
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+    <section id="paymentAlertContainer">
+        <section id="paymentNotify">
+            <video autoplay muted playsinline>
+                <source src="./Stylesheets/Images/done.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <h3 id="successfulMassage">Payment Successful!</h3>
+            <span id="deliverMassage">Your Order will be Delivered within 3-4 Days...!</span>
+            <button class="notifyCloseBtn">Close</button>
+        </section>
+    </section>
 
     <main id="main01">
     
