--- a/cart.html
+++ b/cart.html
@@ -80,10 +80,10 @@
             <h1 class="finalPrice">--</h1>
         </div>
 
-        <a href="./payment.html" class="checkoutbtn">
+        <button class="checkoutbtn">
             <span></span>
             Checkout
-        </a>
+        </button>
 
     </section>
     
